# verdant

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
examples/: basic.rs  boids.rs  canvas.rs  clock.rs  drawing.rs  font_fallback.rs  minimal.rs  minimal_shapes.rs  multi_window.rs  outline_scaling.rs  paint.rs  rich_text.rs  scaling_modes.rs  scoped_state.rs  text.rs  views.rs
src/: canvas.rs  errors.rs  event.rs  font.rs  image.rs  lib.rs  prelude.rs  render_surface.rs  shape_vertices.rs  shapes.rs  text.rs  transform.rs  types.rs  vec.rs  view.rs  window.rs
src/shaders/: 2d.wgsl
