[package]
name = "verdant"
version = "0.4.3"
edition = "2024"
description = "A WIP windowing and rendering library, built on a modern foundation, aiming to be lightweight, performant, and powerful."
license = "MPL-2.0"
repository = "https://github.com/grimtin10/verdant"

[features]
default = ["image", "text"]
image = ["dep:image"]
text = ["dep:fontdue"]

[dependencies]
bytemuck = "1.25.0"
pollster = "0.4.0"
thiserror = "2.0.18"
wgpu = "29.0.3"
winit = "0.31.0-beta.2"

fontdue = { version = "0.9.3", optional = true }
image = { version = "0.25.10", optional = true }

[build-dependencies]
cfg_aliases = "0.2.0"

[dev-dependencies]
rand = "0.10.1"
time = { version = "0.3", features = ["local-offset"] }
