[package]
name = "verdant"
version = "0.7.0"
edition = "2024"
description = "A windowing and rendering library, made to be accessible. Clean API, SDF-based rendering, multi-window support, built on wgpu and winit."
license = "MPL-2.0"
repository = "https://github.com/grimtin10/verdant"

[features]
default = ["text", "image-png", "image-jpeg", "dx12", "metal", "vulkan"]

text = ["dep:fontdue"]

image = ["dep:image"]
image-png  = ["image", "image/png"]
image-jpeg = ["image", "image/jpeg"]
image-webp = ["image", "image/webp"]
image-gif  = ["image", "image/gif"]
image-all  = ["image", "image/default"]

dx12 = ["wgpu/dx12"]
metal = ["wgpu/metal"]
vulkan = ["wgpu/vulkan"]
gles = ["wgpu/gles"]

linux-wayland-csd = ["winit/wayland-csd-adwaita"]

glam = ["dep:glam"]

[dependencies]
bytemuck = "1.25.0"
pollster = "0.4.0"

winit = { version = "0.31.0-beta.2", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] }

wgpu = { version = "29.0.3", default-features = false, features = ["wgsl", "std", "parking_lot"] }

fontdue = { version = "0.9.3", optional = true, default-features = false, features = ["simd", "std"] }
image = { version = "0.25.10", optional = true, default-features = false }
glam = { version = "0.33.1", optional = true }
smol_str = "0.3.6"

[build-dependencies]
cfg_aliases = "0.2.0"

[dev-dependencies]
fastrand = "2.0"
time = { version = "0.3", features = ["local-offset"] }
